# Morph

./: .gitignore  .prettierignore  CLAUDE.md  PRD.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
billing/: package.json  schema.sql  tsconfig.json  wrangler.toml
billing/src/: index.ts  types.ts
docs/: architecture.md  asana-project-plan.md  color-palette.md  market-analysis.md  stripe-setup.md  team-conventions.md  technical-analysis.md
docs/superpowers/plans/: 2026-03-15-morph-glow-up.md
docs/superpowers/specs/: 2026-03-15-morph-glow-up-design.md
landing/: index.html
spikes/ts-1-macos-overlay/: FINDINGS.md  index.html  package-lock.json  package.json
spikes/ts-1-macos-overlay/src/: main.ts
spikes/ts-1-macos-overlay/src-tauri/: Cargo.toml  tauri.conf.json
spikes/ts-1-macos-overlay/src-tauri/capabilities/: default.json
spikes/ts-1-macos-overlay/src-tauri/src/: lib.rs  main.rs
spikes/ts-2-windows-overlay/: FINDINGS.md  index.html  package-lock.json  package.json
spikes/ts-2-windows-overlay/src/: main.ts
spikes/ts-2-windows-overlay/src-tauri/: Cargo.toml  tauri.conf.json
spikes/ts-2-windows-overlay/src-tauri/capabilities/: default.json
spikes/ts-2-windows-overlay/src-tauri/src/: lib.rs  main.rs
spikes/ts-3-fullscreen/: FINDINGS.md  index.html  package-lock.json  package.json
spikes/ts-3-fullscreen/src/: main.ts
spikes/ts-3-fullscreen/src-tauri/: Cargo.toml  tauri.conf.json
spikes/ts-3-fullscreen/src-tauri/capabilities/: default.json
spikes/ts-3-fullscreen/src-tauri/src/: lib.rs  main.rs
spikes/ts-4-architecture/: FINDINGS.md
spikes/ts-5-google-oauth/: FINDINGS.md  package-lock.json  package.json
spikes/ts-5-google-oauth/src/: App.css  App.tsx
spikes/ts-5-google-oauth/src-tauri/: Cargo.toml  tauri.conf.json
spikes/ts-5-google-oauth/src-tauri/src/: calendar.rs  keychain.rs  lib.rs  main.rs  oauth.rs
spikes/ts-6-ms-oauth/: FINDINGS.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: border_state.rs  lib.rs  main.rs  settings.rs  tick.rs  tray.rs
src-tauri/src/calendar/: aggregator.rs  apple.rs  error.rs  google.rs  microsoft.rs  mod.rs  poller.rs  provider.rs  types.rs
src-tauri/src/window_manager/: macos.rs  mod.rs  windows.rs
src/lib/color-engine/: index.ts  palettes.ts  resolve-phase.ts  types.ts
src/lib/color-engine/__tests__/: color-math.test.ts  event-filtering.test.ts  free-warning.test.ts  gap-transitions.test.ts  in-session.test.ts  integration.test.ts  performance.bench.ts
src/lib/timer/: index.ts  presets.ts  types.ts
src/lib/timer/__tests__/: presets.test.ts  timer.test.ts
src/lib/types/: calendar-event.ts
src/overlay/: index.html  overlay.ts
src/overlay/__tests__/: overlay.test.ts  pulse.test.ts
src/settings/: App.tsx  ErrorBoundary.tsx  index.html  main.tsx  styles.css
src/settings/__tests__/: AlertsTab.test.tsx  App.redesign.test.tsx  BorderTab.redesign.test.tsx  BorderTab.test.tsx  CalendarTab.redesign.test.tsx  CalendarTab.test.tsx  ErrorBoundary.test.tsx  GeneralTab.redesign.test.tsx  GeneralTab.test.tsx  MiniPreview.test.tsx  TimelineScrubber.test.tsx  TimerTab.redesign.test.tsx  WarningSettings.test.tsx  useSettings.test.ts
src/settings/components/: MiniPreview.tsx  TimelineScrubber.tsx  WarningSettings.tsx
src/settings/hooks/: useSettings.ts
src/settings/tabs/: AboutTab.tsx  AlertsTab.tsx  BorderTab.tsx  CalendarTab.tsx  GeneralTab.tsx  TimerTab.tsx  WelcomeTab.tsx
src/shared/: design-tokens.css
src/shared/__tests__/: components.test.tsx  useTheme.test.ts
src/shared/components/: Badge.tsx  Button.tsx  Card.tsx  Chip.tsx  IconButton.tsx  ProgressRing.tsx  SectionHeader.tsx  Slider.tsx  Toggle.tsx  index.ts
src/shared/hooks/: useTheme.ts
src/tray/: App.tsx  index.html  main.tsx  styles.css
src/tray/__tests__/: TrayApp.test.tsx
src/tray/components/: ActiveTimer.tsx  Footer.tsx  QuickActions.tsx  StatusHeader.tsx  UpNext.tsx
