[package]
name = "lighttime"
version = "0.1.0"
edition = "2021"
description = "Ambient screen border timer — Tauri backend"

[lib]
name = "lighttime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSValue", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSColor", "NSGraphics", "NSApplication", "NSRunningApplication", "NSResponder", "NSView"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
