[package]
name = "lighttime"
version = "0.1.0"
edition = "2021"
description = "Ambient screen border timer — Tauri backend"

[lib]
name = "lighttime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tiny_http = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
open = "5"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSValue", "NSThread", "NSDate", "NSString", "NSArray", "NSPredicate", "NSError", "NSObjCRuntime"] }
block2 = "0.6"
objc2-event-kit = { version = "0.3", features = ["EKEventStore", "EKEvent", "EKCalendar", "EKCalendarItem", "EKObject", "EKTypes", "block2"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSColor", "NSGraphics", "NSApplication", "NSRunningApplication", "NSResponder", "NSView"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
