[package]
name = "ts-2-windows-overlay"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows-specific dependencies for native HWND manipulation.
# The `windows` crate provides safe bindings to Win32 APIs.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }

# macOS dependencies (for cross-platform development/compilation on macOS)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSValue", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSColor", "NSGraphics", "NSApplication", "NSRunningApplication", "NSResponder", "NSView"] }
