[package]
name = "ts-3-fullscreen"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSValue", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSScreen", "NSColor", "NSGraphics", "NSApplication", "NSRunningApplication", "NSResponder", "NSView"] }
